# weibo_scope

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  weibo.cbp  weibo.ubuntu_0.1_armhf.click
click/: CMakeLists.txt  Makefile  apparmor.json  cmake_install.cmake  manifest.json  manifest.json.in  weibo.application  weibo.application.in  weibo.provider  weibo.provider.in  weibo.service  weibo.service.in
data/: CMakeLists.txt  Makefile  cmake_install.cmake  weibo.ubuntu_weibo.ini.in
include/api/: client.h
include/scope/: query.h
po/: Makefile  POTFILES.in  cmake_install.cmake  unity-scope-weibo.pot  weibo.pot
src/: CMakeLists.txt  Makefile  cmake_install.cmake  weibo.ubuntu_weibo.ini
src/api/: client.cpp
src/scope/: preview.cpp  query.cpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/gmock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tests/gmock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
tests/unit/: CTestTestfile.cmake  Makefile  cmake_install.cmake  scope-unit-tests
